shaku/tests/ui/circular_dependency_compile_time.stderr
error[E0275]: overflow evaluating the requirement `Component2: shaku::component::Component<TestModule>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component1`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `Component1: shaku::component::Component<TestModule>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because it appears within the type `TestModule`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component2Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component1`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component1Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component2`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component2Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component1`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component2Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component1`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component2Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component1`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component2Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component1`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component1Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component2`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component1Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component2`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component1Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component2`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0275]: overflow evaluating the requirement `TestModule: shaku::component::HasComponent<(dyn Component1Trait + 'static)>`
  --> $DIR/circular_dependency_compile_time.rs:28:1
   |
28 | / module! {
29 | |     TestModule {
30 | |         components = [Component1, Component2],
31 | |         providers = []
32 | |     }
33 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `shaku::component::Component<TestModule>` for `Component2`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
